<resources>
    <string name="app_name">My Application</string>
    <string name="sql_lite_crud_app">SQL Lite CRUD App</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
</resources>